@@ -1,7 +1,16 @@
+2007-03-04  SIGOURE Benoit  <tsuna@lrde.epita.fr>
+
+	Cleanup the NOMINMAX issue.
+	* ChangeLog: Cleanup a ChangeLog entry.
+	* windows.hh: Define NOMINMAX to 1 (which is what MinGW does) and
+	don't undefine it (that would be lying).
+
 2007-03-02  Matthieu Nottale  <nottale@gostai.com>
 
 	Revert commit 628
-	* singleton-ptr.hh: Restore STATIC_INSTANCE which is used to define multiple "singleton" of the same class (reason: delay initialisation of object to first time its needed).
+        * singleton-ptr.hh: Restore STATIC_INSTANCE which is used to define
+	multiple "singleton" of the same class (reason: delay initialisation
+	of object to first time its needed).
 
 2007-03-01  Akim Demaille  <demaille@gostai.com>
 
